// Vireon Banking System - Database Diagram
// dbdiagram.io formatında hazırlanmıştır
// Bu dosyayı https://dbdiagram.io/d adresine yapıştırarak görselleştirebilirsiniz

Table Users {
  Id int [pk, increment, note: 'Kullanıcı kimliği']
  Name nvarchar(255) [not null, note: 'Kullanıcı adı']
  Surname nvarchar(255) [not null, note: 'Kullanıcı soyadı']
  Email nvarchar(255) [not null, unique, note: 'E-posta adresi']
  Password nvarchar(255) [not null, note: 'Giriş şifresi']

  Note: '''
  Sistemdeki kullanıcı bilgilerini tutan tablo
  Navigation: Accounts (1:N), DailyLimit (1:1)

  Seed Data:
  1 | Cavit Batu | Soylu  | cavitbatu@vireon.com | 123456
  2 | Enes       | Kaya   | enes@vireon.com      | 123456
  3 | Kerem      | Arslan | kerem@vireon.com     | 123456
  '''
}

Table Accounts {
  Id int [pk, increment, note: 'Benzersiz hesap kimliği']
  UserId int [not null, ref: > Users.Id, note: 'Hesabın ait olduğu kullanıcı (CASCADE DELETE)']
  AccountNumber nvarchar(50) [not null, unique, note: 'Hesap numarası (VR-XXXX)']
  Balance decimal(18,2) [not null, default: 0, note: 'Hesap bakiyesi (negatif olamaz)']
  Currency nvarchar(10) [not null, note: 'Para birimi (TRY, USD, EUR)']

  Note: '''
  Kullanıcı hesap bilgilerini tutan tablo
  Navigation: User (N:1), SentTransactions (1:N), ReceivedTransactions (1:N), FraudLogs (1:N), LedgerEntries (1:N)

  Seed Data:
  1 | VR-1001 | 15000.00 | TRY | UserId:1
  2 | VR-1002 |  8500.00 | TRY | UserId:2
  3 | VR-1003 |  3200.00 | TRY | UserId:3
  '''
}

Table Transactions {
  Id int [pk, increment, note: 'İşlem kimliği']
  SenderAccountId int [not null, ref: > Accounts.Id, note: 'Gönderici hesap (RESTRICT DELETE)']
  ReceiverAccountId int [not null, ref: > Accounts.Id, note: 'Alıcı hesap (RESTRICT DELETE)']
  Amount decimal(18,2) [not null, note: 'Transfer edilen miktar (> 0)']
  Date datetime [not null, default: `getdate()`, note: 'İşlem tarihi']

  Note: '''
  Para transferi işlemlerini tutan tablo - ACID transaction ile korunur
  Navigation: SenderAccount (N:1), ReceiverAccount (N:1)
  Kural: SenderAccountId != ReceiverAccountId, Amount > 0

  Seed Data:
  1 | Sender:1 → Receiver:2 | 1000.00 | 2026-04-01
  2 | Sender:2 → Receiver:3 |  500.00 | 2026-04-02
  3 | Sender:1 → Receiver:3 |  250.00 | 2026-04-03
  '''
}

Table DailyLimits {
  Id int [pk, increment, note: 'Limit kaydı kimliği']
  UserId int [not null, unique, ref: - Users.Id, note: 'Limitlerin ait olduğu kullanıcı (1:1, CASCADE DELETE)']
  MaxDailyLimit decimal(18,2) [not null, note: 'Maksimum günlük limit miktarı']
  UsedLimit decimal(18,2) [not null, default: 0, note: 'Gün içerisinde kullanılan miktar']
  LastResetDate datetime [not null, note: 'Limitlerin son sıfırlanma tarihi (her gün 00:00 sıfırlanır)']

  Note: '''
  Günlük işlem limitlerini tutan tablo - User ile 1:1 ilişki
  Navigation: User (1:1)
  Kural: UsedLimit <= MaxDailyLimit, her gün 00:00 sıfırlanır

  Seed Data:
  1 | UserId:1 | Max:50000 | Used:1500 | Reset:2026-04-04
  2 | UserId:2 | Max:25000 | Used:0    | Reset:2026-04-04
  3 | UserId:3 | Max:10000 | Used:500  | Reset:2026-04-04
  '''
}

Table FraudLogs {
  Id int [pk, increment, note: 'Kayıt kimliği']
  AccountId int [not null, ref: > Accounts.Id, note: 'Riskli hesabın kimliği (CASCADE DELETE)']
  RiskType nvarchar(50) [not null, note: 'Risk türü: Low | Medium | High | HIGH_AMOUNT | FREQUENT_TRANSACTIONS']
  Description nvarchar(500) [not null, note: 'Risk detayı']
  LogDate datetime [not null, default: `getdate()`, note: 'Kayıt tarihi']

  Note: '''
  Şüpheli işlem kayıtlarını tutan tablo - AI fraud detection
  Navigation: Account (N:1)

  Seed Data:
  1 | AccountId:1 | Low    | Normal işlem                      | 2026-04-01
  2 | AccountId:2 | Medium | Yüksek tutarlı işlem tespit edildi | 2026-04-02
  '''
}

Table LedgerEntries {
  Id int [pk, increment, note: 'Defter kaydı kimliği']
  AccountId int [not null, ref: > Accounts.Id, note: 'İşlem gören hesap (CASCADE DELETE)']
  Amount decimal(18,2) [not null, note: 'İşlem miktarı (+/-)']
  PreviousBalance decimal(18,2) [not null, note: 'İşlem öncesi bakiye']
  NewBalance decimal(18,2) [not null, note: 'İşlem sonrası yeni bakiye (PreviousBalance + Amount = NewBalance)']
  Description nvarchar(500) [not null, note: 'İşlem açıklaması']
  CreatedAt datetime [not null, default: `getdate()`, note: 'Kayıt oluşturulma tarihi']

  Note: '''
  IMMUTABLE LEDGER - Muhasebe defteri kayıtları (asla silinmez/güncellenmez)
  Navigation: Account (N:1)
  Her transfer için 2 kayıt: gönderici (-), alıcı (+)

  Seed Data:
  1 | AccountId:1 | -1000 | Prev:16000 → New:15000 | VR-1002 hesabına havale    | 2026-04-01
  2 | AccountId:2 | +1000 | Prev:7500  → New:8500  | VR-1001 hesabından havale  | 2026-04-01
  3 | AccountId:2 |  -500 | Prev:8500  → New:8000  | VR-1003 hesabına havale    | 2026-04-02
  4 | AccountId:3 |  +500 | Prev:2700  → New:3200  | VR-1002 hesabından havale  | 2026-04-02
  '''
}

// =============================================
// İLİŞKİ ÖZETİ
// =============================================
// Users    1:N  Accounts          (CASCADE DELETE)
// Users    1:1  DailyLimits       (CASCADE DELETE)
// Accounts 1:N  Transactions      (RESTRICT DELETE - Sender)
// Accounts 1:N  Transactions      (RESTRICT DELETE - Receiver)
// Accounts 1:N  LedgerEntries     (CASCADE DELETE)
// Accounts 1:N  FraudLogs         (CASCADE DELETE)
